Fixed horizontal scrollbar

--- a/frontend/src/components/Posts/PostsStyles.css
+++ b/frontend/src/components/Posts/PostsStyles.css
@@ -1,7 +1,6 @@
 .AccountPostsList {
     display: flex;
     flex-direction: column;
-    background-color: #7a7d7d;
 }
 
 .AccountPostsList li {
